# HW2

./: .gitignore  CMakeLists.txt  Grid2d.cpp  Grid2d.h  SL_method.cpp  SL_method.h  allVTK.vtk  allVTK9.vtk  check_dx.csv  error_analysis.m  error_analysis.m~  hw2.q1.cpp  hw2.q2.cpp  hw2.q3.cpp  hw3.q3.cpp  inf_errors.csv  l1_errors.csv  l2_errors.csv  main.cpp  math_tools.cpp  math_tools.h  newVTK.vtk  q1VTK129.vtk  q1VTK17.vtk  q1VTK33.vtk  q1VTK65.vtk  q1VTK9.vtk  q2reinit.vtk  q3VTK.vtk
